@@ -23,6 +23,7 @@ t/create.t
 t/curr_test.t
 t/details.t
 t/diag.t
+t/dont_overwrite_die_handler.t
 t/eq_set.t
 t/exit.t
 t/extra.t
@@ -41,12 +42,14 @@ t/is_deeply_dne_bug.t
 t/is_deeply_fail.t
 t/is_deeply_with_threads.t
 t/is_fh.t
+t/lib/Dev/Null.pm
 t/lib/Dummy.pm
 t/lib/MyOverload.pm
 t/lib/NoExporter.pm
 t/lib/Test/Simple/Catch.pm
 t/lib/Test/Simple/sample_tests/death.plx
 t/lib/Test/Simple/sample_tests/death_in_eval.plx
+t/lib/Test/Simple/sample_tests/death_with_handler.plx
 t/lib/Test/Simple/sample_tests/exit.plx
 t/lib/Test/Simple/sample_tests/extras.plx
 t/lib/Test/Simple/sample_tests/five_fail.plx
